--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
                 <img class="profile__image" src="./images/profile-avatar.png" alt="Аватар">
             </section>
             <div class="profile__info">
-                <p class="profile__name">Жак-Ив Кусто</p>
-                <button class="profile__button-edit"></button>
+                <div class="profile__information">
+                    <p class="profile__name">Жак-Ив Кусто</p>
+                    <button class="profile__button-edit"></button>
+                </div>
                 <p class="profile__about">Исследователь океана</p>
             </div>
             <button class="profile__button-add"></button>
