--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
 </head>
 
 <body class="page">
+    <form class="pop-up"> <!--pop-up_hide Для скрытия Pop-UP окна-->
+        <div class="pop-up__form">
+        <p class="pop-up__edit">Редактировать профиль</p>
+        <fieldset class="pop-up__name">
+            <legend>Жак-Ив Кусто</legend>
+        </fieldset>
+        <fieldset class="pop-up__info">Исследователь океана</fieldset>
+        <button class="pop-up__button-edit">Сохранить</button>
+    </div>
+    <button class="pop-up__button-close"></button>
+    </form>
     <header class="header">
         <img class="header__logo" src="./images/header-logo.svg" alt="Лого Mesto">
     </header>
@@ -74,4 +85,5 @@
         </section>
     </main>
     <footer class="footer">© 2020 Mesto Russia</footer>
+    <script src="/scrypt.js"></script>
 </body>
