--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
             <template id="card__template">
                 <article class="elements__element">
                     <button class="elements__thrash" type="submit"></button>
-                    <img class="elements__photo" alt=" Фото" onclick="openfullpicture()" />
+                    <button class="elements__button" type="submit">
+                        <img class="elements__photo" alt=" Фото" />
+                    </button>
                     <div class="elements__info">
                         <h2 class="elements__text"></h2>
                         <button class="elements__like" type="submit">
@@ -45,36 +47,41 @@
     <footer class="footer">
         <p class="footer__text"> &#169; 2023 Mesto Russia</p>
     </footer>
-    <section class="pop-up__all">
+    <section class="profile-popup">
         <form class="pop-up">
             <div class="pop-up__form">
                 <button type="submit" class="pop-up__button-close"></button>
                 <h3 class="pop-up__edit">Редактировать профиль</h3>
-                <input type="text" class="pop-up__input pop-up_name" id="inputName" placeholder="Имя" value="Имя" />
-                <input type="text" class="pop-up__input pop-up_info" id="inputInfo" placeholder="О себе"
-                    value="О себе" />
+                <input type="text" class="pop-up__input pop-up_name" id="inputName" placeholder="Имя" value="Имя"
+                    minlength="2" maxlength="40" required />
+                    <span class="pop-up__errors">Вы пропустили это поле.</span>
+                <input type="text" class="pop-up__input pop-up_info" id="inputInfo" placeholder="О себе" value="О себе"
+                    minlength="2" maxlength="200" required />
+                    <span class="pop-up__errors">Вы пропустили это поле.</span>
                 <button type="submit" class="pop-up__button-edit">Сохранить</button>
             </div>
         </form>
     </section>
-    <section class="pop-up__all" id="pictureAddPop">
+    <section class="profile-popup" id="pictureAddPop">
         <form class="pop-up">
             <div class="pop-up__form">
                 <button type="submit" class="pop-up__button-close"></button>
                 <h3 class="pop-up__edit">Новое место</h3>
                 <input type="text" class="pop-up__input pop-up_name" id="inputTitle" placeholder="Название"
-                    value="Название" />
-                <input type="text" class="pop-up__input pop-up_info" id="inputLinkPicture"
-                    placeholder="Ссылка на картинку" value="Ссылка на картинку" />
+                    value="Название" minlength="2" maxlength="30" required />
+                    <span class="pop-up__errors">Вы пропустили это поле.</span>
+                <input type="url" class="pop-up__input pop-up_info" id="inputLinkPicture"
+                    placeholder="Ссылка на картинку" value="Ссылка на картинку" required />
+                    <span class="pop-up__errors">Введите адрес сайта.</span>
                 <button type="submit" class="pop-up__button-edit" id="newPicture">Сохранить</button>
             </div>
         </form>
     </section>
-    <section class="pop-up__all" id="pictureFull">
-        <form class="pop-up__picture">
+    <section class="profile-popup" id="pictureFull">
+        <form class="pop-up pop-up__picture">
             <div class="pop-up__fullpicture" id="picF">
-                <div class="pop-up__picOpen" id="picO">
-                </div>
+                <div class="pop-up__picOpen" id="picO"></div>
+                <h2 class="pop-up__picText" id="picText"></h2>
                 <button type="submit" class="pop-up__button-close"></button>
             </div>
         </form>
@@ -82,7 +89,9 @@
     <template id="card__template">
         <article class="elements__element">
             <button class="elements__thrash" type="submit"></button>
-            <img class="elements__photo" alt=" Фото" />
+            <button class="elements__button" type="submit">
+                <img class="elements__photo" alt=" Фото" />
+            </button>
             <div class="elements__info">
                 <h2 class="elements__text"></h2>
                 <button class="elements__like" type="submit">
